# openmanager-vibe-v5

./: .bashrc_claude_additions  .claude-code-memory-fix.sh  .claude-project.json  .claude_session.json  .claudeignore  .cursorrules  .editorconfig  .env.example  .env.local.example  .env.local.template  .eslintignore  .eslintrc.json  .eslintrc.json.backup  .eslintrc.performance.json  .eslintrc.quick.json  .eslintrc.ultrafast.json  .git-commit  .gitattributes  .gitconfig  .gitignore  .jbge-essential-docs  .jbge-root-file-policy  .last-commit-message  .lighthouserc.json  .lintstagedrc.js  .lintstagedrc.json  .markdown-link-check.json  .markdownlint.jsonc  .mcp.json  .mcp.json.example  .mcp.json.template  .npmrc  .npmrc.save  .prettierrc  .redis-mock-data  .securityignore  .serena-project.yml  .temp-deploy-trigger  .tmux.conf  .trufflehog-excludes.txt  (+407 more)
.claude/: MCP-MIGRATION-COMPLETE.md  MCP-MIGRATION-NOTICE.md  MCP-RESET-GUIDE.md  README.md  ai-assignment-matrix.json  ai-usage-tracker.json  ai-verification-request.md  changelog.config.sh  check-mcp-status.sh  cross-verification-queue.txt  cross-verification-test-report.md  fix-permission-matrix.json  fix-supabase-mcp.md  gemini-helper.md  mcp.json  (+27 more)
cloud-run/rust-inference/: .dockerignore  Cargo.toml  Dockerfile  cloudbuild.yaml
cloud-run/rust-inference/data/: fixed-24h-data.json
cloud-run/rust-inference/src/: main.rs
cloud-run/rust-inference/src/handlers/: clustering.rs  feedback.rs  health.rs  inference.rs  mod.rs
cloud-run/rust-inference/src/ml/: anomaly.rs  clustering.rs  feedback.rs  mod.rs  trend.rs
tools/: g  (+7 more)
(+8427 files in other folders)
