[package]
name = "rust-inference"
version = "0.1.0"
edition = "2021"
description = "LangGraph ML Support Service - Anomaly Detection & Trend Prediction"
authors = ["OpenManager VIBE"]

[dependencies]
# Web Framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Middleware
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math & ML
linfa = "0.7"
linfa-clustering = "0.7"
linfa-nn = "0.7"
linfa-linalg = "0.1"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
